# ygit

./: .dockerignore  .env.example  .gitattributes  .gitignore  ADMIN_PANEL_DELIVERY_NOTE.md  AUDIT_ENGINE_DELIVERY_NOTE.md  AUDIT_REPORT.md  AUTH_ENGINE_DELIVERY_NOTE.md  CHANGELOG.md  CONNECTED_ACCOUNTS_MODULE_DELIVERY_NOTE.md  CONTRACT_MANIFEST.json  DASHBOARD_COMPACT_PROVIDER_CARDS_SPEC.md  DASHBOARD_DELIVERY_NOTE.md  DASHBOARD_PROJECT_DEPLOY_UI_SPEC.md  DASHBOARD_PROJECT_OPEN_UI_SPEC.md  DASHBOARD_PROJECT_READINESS_API_SPEC.md  DEPLOYMENT_HISTORY_ENGINE_DELIVERY_NOTE.md  DEPLOY_ENGINE_DELIVERY_NOTE.md  DEPLOY_PIPELINE_DELIVERY_NOTE.md  DOMAIN_ENGINE_DELIVERY_NOTE.md  Dockerfile  GITHUB_APP_INTEGRATION.md  GITHUB_APP_PERMISSION_CAPTURE_SPEC.md  INTEGRATION_REVIEW_DELIVERY_NOTE.md  LIVE_DEPLOYMENT_RUNBOOK.md  LIVE_RUNTIME_SMOKE_TEST_CHECKLIST.md  LIVE_RUNTIME_SMOKE_TEST_MATRIX.json  LIVE_RUNTIME_SMOKE_TEST_PLAN_DELIVERY_NOTE.md  LIVE_RUNTIME_SMOKE_TEST_PLAN_v0.1.0.md  LIVE_RUNTIME_SMOKE_TEST_RUNBOOK.md  MVP_RELEASE_GATE_CHECKLIST.md  MVP_RELEASE_GATE_REPORT.json  Makefile  NOTIFICATION_ENGINE_DELIVERY_NOTE.md  PLATFORM_ENGINE_DELIVERY_NOTE.md  PROJECT_ENGINE_DELIVERY_NOTE.md  PROJECT_STATUS.md  README.md  RELEASE.json  REPOSITORY_ANALYSIS_CURRENT_STATE_AUDIT.md  (+7 more)
docker/: README.md
docs/: ARCHITECTURE_FREEZE_IMPLEMENTATION.md  AUTH_ENGINE_v0.1.0.md  CONTRACT_VERSIONS.md  ENGINE_COMPLETION_CHECKLIST.md  MVP_INTEGRATION_REVIEW_AND_RELEASE_GATE_v0.1.0.md  PROJECT_ENGINE_v0.1.0.md
frontend/: README.md
operations/: README.md
scripts/: live_readiness.py  release_gate.py  (+2 more)
(+345 files in other folders)
