[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ygit-platform"
version = "0.1.0"
description = "YGIT FastAPI MVP Skeleton"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Vib Tools" }]
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.3,<3.0",
  "email-validator>=2.1,<3.0",
  "SQLAlchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "asyncpg>=0.29,<1.0",
  "redis>=5.0,<6.0",
  "httpx>=0.27,<1.0",
  "PyJWT[crypto]>=2.8,<3.0",
  "cryptography>=42,<50",
  "python-json-logger>=2.0,<3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
  "bandit>=1.7,<2.0",
  "pip-audit>=2.7,<3.0"
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
packages = ["backend"]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
pythonpath = ["."]
